removed conflicted workspace

--- a/.obsidian/config
+++ b/.obsidian/config
@@ -1,256 +1,1 @@
-{
-  "theme": "obsidian",
-  "pluginEnabledStatus": {
-    "file-explorer": true,
-    "global-search": true,
-    "switcher": true,
-    "graph": true,
-    "backlink": true,
-    "command-palette": true,
-    "markdown-importer": false,
-    "word-count": true,
-    "custom-css": true,
-    "tag-pane": true,
-    "page-preview": false,
-    "starred": true,
-    "templates": true,
-    "zk-prefixer": false,
-    "random-note": true,
-    "outline": true,
-    "slides": true,
-    "audio-recorder": false,
-    "open-with-default-app": true,
-    "daily-notes": true,
-    "translucency": true,
-    "mrj_jl": true,
-    "fullscreenmode": true,
-    "publish": true,
-    "workspaces": true,
-    "vimrc-loader": true
-  },
-  "vimMode": true,
-  "foldHeading": true,
-  "foldIndent": true,
-  "promptDelete": false,
-  "hotkeys": {
-    "editor:toggle-fold": [
-      {
-        "modifiers": [
-          "Alt"
-        ],
-        "key": "Tab"
-      }
-    ],
-    "editor:fold-all": [
-      {
-        "modifiers": [
-          "Shift"
-        ],
-        "key": "Tab"
-      }
-    ],
-    "insert-template": [
-      {
-        "modifiers": [
-          "Mod"
-        ],
-        "key": "t"
-      }
-    ],
-    "editor:unfold-all": [
-      {
-        "modifiers": [
-          "Alt",
-          "Shift"
-        ],
-        "key": "Tab"
-      }
-    ],
-    "app:toggle-left-sidebar": [
-      {
-        "modifiers": [
-          "Mod",
-          "Shift"
-        ],
-        "key": "ArrowLeft"
-      },
-      {
-        "modifiers": [
-          "Mod",
-          "Shift"
-        ],
-        "key": "H"
-      }
-    ],
-    "app:toggle-right-sidebar": [
-      {
-        "modifiers": [
-          "Mod",
-          "Shift"
-        ],
-        "key": "ArrowRight"
-      },
-      {
-        "modifiers": [
-          "Mod",
-          "Shift"
-        ],
-        "key": "L"
-      }
-    ],
-    "app:go-back": [
-      {
-        "modifiers": [
-          "Alt",
-          "Mod"
-        ],
-        "key": "ArrowLeft"
-      },
-      {
-        "modifiers": [
-          "Alt"
-        ],
-        "key": "h"
-      },
-      {
-        "modifiers": [
-          "Mod"
-        ],
-        "key": "["
-      }
-    ],
-    "app:go-forward": [
-      {
-        "modifiers": [
-          "Mod",
-          "Shift"
-        ],
-        "key": "L"
-      },
-      {
-        "modifiers": [
-          "Alt"
-        ],
-        "key": "l"
-      },
-      {
-        "modifiers": [
-          "Mod"
-        ],
-        "key": "]"
-      }
-    ],
-    "editor:focus-left": [
-      {
-        "modifiers": [
-          "Alt",
-          "Mod"
-        ],
-        "key": "h"
-      }
-    ],
-    "editor:focus-right": [
-      {
-        "modifiers": [
-          "Alt",
-          "Mod"
-        ],
-        "key": "l"
-      }
-    ],
-    "workspace:split-vertical": [
-      {
-        "modifiers": [
-          "Mod"
-        ],
-        "key": "/"
-      }
-    ],
-    "workspace:split-horizontal": [
-      {
-        "modifiers": [
-          "Mod"
-        ],
-        "key": "\\"
-      }
-    ],
-    "editor:swap-line-up": [
-      {
-        "modifiers": [
-          "Alt"
-        ],
-        "key": "ArrowUp"
-      }
-    ],
-    "editor:swap-line-down": [
-      {
-        "modifiers": [
-          "Alt"
-        ],
-        "key": "ArrowDown"
-      }
-    ],
-    "random-note": [
-      {
-        "modifiers": [
-          "Alt"
-        ],
-        "key": "r"
-      }
-    ],
-    "daily-notes": [
-      {
-        "modifiers": [
-          "Alt"
-        ],
-        "key": "†"
-      },
-      {
-        "modifiers": [
-          "Alt"
-        ],
-        "key": "t"
-      }
-    ],
-    "app:open-vault": [
-      {
-        "modifiers": [
-          "Alt"
-        ],
-        "key": "v"
-      }
-    ],
-    "workspaces:open-modal": [
-      {
-        "modifiers": [
-          "Alt",
-          "Shift"
-        ],
-        "key": "W"
-      }
-    ],
-    "workspaces:load": [
-      {
-        "modifiers": [
-          "Alt"
-        ],
-        "key": "w"
-      }
-    ]
-  },
-  "strictLineBreaks": false,
-  "alwaysUpdateLinks": true,
-  "attachmentFolderPath": "attachments",
-  "defaultViewMode": "source",
-  "autoPairBrackets": true,
-  "spellcheck": true,
-  "showFrontmatter": false,
-  "showLineNumber": false,
-  "readableLineLength": true,
-  "newFileLocation": "current",
-  "enabledPlugins": [],
-  "spellcheckDictionary": [
-    "vimtutor"
-  ],
-  "autoPairMarkdown": false
-}
+{"theme":"obsidian","pluginEnabledStatus":{"file-explorer":true,"global-search":true,"switcher":true,"graph":true,"backlink":true,"command-palette":true,"markdown-importer":false,"word-count":true,"tag-pane":true,"page-preview":false,"starred":true,"templates":true,"zk-prefixer":false,"random-note":true,"outline":true,"slides":true,"audio-recorder":false,"open-with-default-app":true,"daily-notes":true,"translucency":true,"mrj_jl":true,"fullscreenmode":true,"publish":true,"workspaces":true,"vimrc-loader":true},"vimMode":true,"foldHeading":true,"foldIndent":true,"promptDelete":false,"hotkeys":{"editor:toggle-fold":[{"modifiers":["Alt"],"key":"Tab"}],"editor:fold-all":[{"modifiers":["Shift"],"key":"Tab"}],"insert-template":[{"modifiers":["Mod"],"key":"t"}],"editor:unfold-all":[{"modifiers":["Alt","Shift"],"key":"Tab"}],"app:toggle-left-sidebar":[{"modifiers":["Mod","Shift"],"key":"ArrowLeft"},{"modifiers":["Mod","Shift"],"key":"H"}],"app:toggle-right-sidebar":[{"modifiers":["Mod","Shift"],"key":"ArrowRight"},{"modifiers":["Mod","Shift"],"key":"L"}],"app:go-back":[{"modifiers":["Alt","Mod"],"key":"ArrowLeft"},{"modifiers":["Alt"],"key":"h"},{"modifiers":["Mod"],"key":"["}],"app:go-forward":[{"modifiers":["Mod","Shift"],"key":"L"},{"modifiers":["Alt"],"key":"l"},{"modifiers":["Mod"],"key":"]"}],"editor:focus-left":[{"modifiers":["Alt","Mod"],"key":"h"}],"editor:focus-right":[{"modifiers":["Alt","Mod"],"key":"l"}],"workspace:split-vertical":[{"modifiers":["Mod"],"key":"/"}],"workspace:split-horizontal":[{"modifiers":["Mod"],"key":"\\"}],"editor:swap-line-up":[{"modifiers":["Alt"],"key":"ArrowUp"}],"editor:swap-line-down":[{"modifiers":["Alt"],"key":"ArrowDown"}],"random-note":[{"modifiers":["Alt"],"key":"r"}],"daily-notes":[{"modifiers":["Alt"],"key":"†"},{"modifiers":["Alt"],"key":"t"}],"app:open-vault":[{"modifiers":["Alt"],"key":"v"}],"workspaces:open-modal":[{"modifiers":["Alt","Shift"],"key":"W"}],"workspaces:load":[{"modifiers":["Alt"],"key":"w"}]},"strictLineBreaks":false,"alwaysUpdateLinks":true,"attachmentFolderPath":"attachments","defaultViewMode":"source","autoPairBrackets":true,"spellcheck":true,"showFrontmatter":false,"showLineNumber":false,"readableLineLength":true,"newFileLocation":"current","enabledPlugins":[],"spellcheckDictionary":["vimtutor"],"autoPairMarkdown":false,"obsidianCss":true}
