--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Lesson 3.4 - More Changes Using C.md",
+            "file": "Lesson 5.3 - Selecting Text To Write.md",
             "mode": "source"
           }
         }
@@ -40,7 +40,12 @@
             "state": {
               "type": "search",
               "state": {
-                "query": ""
+                "query": "",
+                "matchingCase": false,
+                "explainSearch": false,
+                "collapseAll": false,
+                "extraContext": false,
+                "sortOrder": "alphabetical"
               }
             }
           },
@@ -72,7 +77,12 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Lesson 3.4 - More Changes Using C.md"
+                "file": "Lesson 5.3 - Selecting Text To Write.md",
+                "collapseAll": false,
+                "extraContext": false,
+                "sortOrder": "alphabetical",
+                "backlinkCollapsed": false,
+                "unlinkedCollapsed": true
               }
             }
           },
@@ -82,7 +92,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Lesson 3.4 - More Changes Using C.md"
+                "file": "Lesson 5.3 - Selecting Text To Write.md"
               }
             }
           },
@@ -91,7 +101,9 @@
             "type": "leaf",
             "state": {
               "type": "tag",
-              "state": {}
+              "state": {
+                "sortOrder": "frequency"
+              }
             }
           }
         ]
@@ -102,15 +114,15 @@
     "collapsed": true
   },
   "lastOpenFiles": [
-    "Lesson 3.4 - More Changes Using C.md",
-    "Lesson 1.3 - Text Editing - Deletion.md",
-    "notes/Untitled.md",
-    "notes/keep in mind.md",
-    "Lesson 7.3 - Completion.md",
-    "Lesson 7.2 - Create A Startup Script.md",
-    "Lesson 7.1 - Getting Help.md",
-    "Lesson 6.6 - Lesson 6 Summary.md",
-    "Lesson 6.5 - Set Option.md",
-    "Lesson 6.4 - Copy And Paste Text.md"
+    "Lesson 5.3 - Selecting Text To Write.md",
+    "Lesson 4.4 - The Substitute Command.md",
+    "Lesson 2.8 - Lesson 2 Summary.md",
+    "Lesson 2.5 - Using A Count To Delete More.md",
+    "Lesson 2.2 - More Deletion Commands.md",
+    "Lesson 1.6 - Editing A File.md",
+    "Lesson 1.0 - Welcome.md",
+    "Lesson 2.7 - The Undo Command.md",
+    "Lesson 2.6 - Operating On Lines.md",
+    "Lesson 2.4 - Using A Count For A Motion.md"
   ]
 }
