added wasp community theme

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Lesson 5.3 - Selecting Text To Write.md",
+            "file": "Lesson 1.5 - Text Editing - Appending.md",
             "mode": "source"
           }
         }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Lesson 5.3 - Selecting Text To Write.md",
+                "file": "Lesson 1.5 - Text Editing - Appending.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -92,7 +92,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Lesson 5.3 - Selecting Text To Write.md"
+                "file": "Lesson 1.5 - Text Editing - Appending.md"
               }
             }
           },
@@ -102,7 +102,8 @@
             "state": {
               "type": "tag",
               "state": {
-                "sortOrder": "frequency"
+                "sortOrder": "frequency",
+                "useHierarchy": true
               }
             }
           }
@@ -114,6 +115,8 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "Lesson 1.5 - Text Editing - Appending.md",
+    "Lesson 1.7 - Lesson 1 Summary.md",
     "Lesson 5.3 - Selecting Text To Write.md",
     "Lesson 4.4 - The Substitute Command.md",
     "Lesson 2.8 - Lesson 2 Summary.md",
@@ -121,8 +124,6 @@
     "Lesson 2.2 - More Deletion Commands.md",
     "Lesson 1.6 - Editing A File.md",
     "Lesson 1.0 - Welcome.md",
-    "Lesson 2.7 - The Undo Command.md",
-    "Lesson 2.6 - Operating On Lines.md",
-    "Lesson 2.4 - Using A Count For A Motion.md"
+    "Lesson 2.7 - The Undo Command.md"
   ]
 }
